--- a/index.html
+++ b/index.html
@@ -161,8 +161,10 @@
     </script>
 
     <!-- jquery cycle2 -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <!-- Update 07/15 added Hash to protect from Malware -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" integrity="sha256-VAvG3sHdS5LqTT+5A/aeq/bZGa/Uj04xKxY8KM/w9EE=" crossorigin="anonymous"></script>
     <script src="./js/jquery.cycle2.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 </body>
 
 </html>
